fixed carousel spacing?

--- a/app/assets/stylesheets/internal/tile_thumbnails.css.scss
+++ b/app/assets/stylesheets/internal/tile_thumbnails.css.scss
@@ -78,7 +78,8 @@ $headline_overlay_top: 148px;
   }
   .jcarousel-item{
     margin-right: 0px;
-    width: 278px;
+    //width: 278px;
+    width:300px;
   }
   .jcarousel-prev-horizontal, .jcarousel-next-horizontal {
     background:image-url('v5/sprites.png') no-repeat transparent;
